# Recommender_System_Proteomics

./: Full_script.ipynb  LICENSE  README.md  Script.ipynb  pyproject.toml
Functions/: ALS.py  Curve_inspection.py  Embedding.py  Preprocessing.py  Read_Me.txt
RS/: ALS_embedding.py  Preprocessing.py  Readme.txt  Run_ALS.py  __init__.py
psite_recommender/: Extract_from_raw_data.py  Heatmaps.py  Neural_network_RS.py  Recommender_system.py  curve_inspection.py  recommender_system.py
