[tool.poetry]
name = "recommender-system-proteomics"
version = "0.1.0"
description = "RS for Proteomics"
authors = ["Manuel Gander"]
license = "Apache 2.0"
readme = "README.md"
packages = [{include = "recommender_system_proteomics"}]

[tool.poetry.dependencies]
python = "^3.10"
seaborn = "^0.12.1"
numpy = "^1.23.4"
pandas = "^1.5.1"
anndata = "^0.8.0"
scanpy = "^1.9.1"
scvelo = "^0.2.4"
statsmodels = "^0.13.2"
implicit = "^0.6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
